@@ -1,7 +1,7 @@
 from Products.CMFPlone import utils
 from zope.component import getMultiAdapter, getUtility
 from zope.interface import alsoProvides
-from zope.security.proxy import removeSecurityProxy
+#from zope.security.proxy import removeSecurityProxy
 from eea.mediacentre.interfaces import IMediaCentre
 
 class MediaTypeProxy(utils.BrowserView):
@@ -12,7 +12,7 @@ class MediaTypeProxy(utils.BrowserView):
         iface = types[media_type]['provider']
 
         alsoProvides(self, iface)
-        context = utils.context(self)
+        #context = utils.context(self)
         view = getMultiAdapter((self, self.request), name="video_provider")
 
         return view.video_items()
